@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- mapwcs.c: advertise temporal support in GetCapabilities (#2487)
+
 - Fixed flaw in findTag() in maptemplate.c that prevented multiple tags on the same line 
   being processed under certain conditions. (#2633)
 
